src/objects/KHRLobject__c.object
<CustomObject>
    <description>Kaiser/Hospital Route List object used to pass data from Javascript to controller.</description>
    <fields>
        <fullName>Constituency__c</fullName>
        <label>Constituency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoordFlag__c</fullName>
        <label>CoordFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoordName__c</fullName>
        <label>CoordName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoordinatorId__c</fullName>
        <label>CoordinatorId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CsEmail__c</fullName>
        <label>CsEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CsId__c</fullName>
        <label>CsId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CsOp__c</fullName>
        <label>CsOp</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CsPhone__c</fullName>
        <label>CsPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CsRecId__c</fullName>
        <description>Id of Contract Specialist record</description>
        <label>CsRecId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectorFlag__c</fullName>
        <label>DirectorFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectorId__c</fullName>
        <label>DirectorId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DivisionCode__c</fullName>
        <label>DivisionCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EboardId__c</fullName>
        <label>EboardId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmpAccountId__c</fullName>
        <label>EmpAccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmpId__c</fullName>
        <label>EmpId</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org1Flag__c</fullName>
        <label>Org1Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org1Id__c</fullName>
        <label>Org1Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org1Name__c</fullName>
        <label>Org1Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org2Flag__c</fullName>
        <label>Org2Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org2Id__c</fullName>
        <label>Org2Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org2Name__c</fullName>
        <label>Org2Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalDirectorId__c</fullName>
        <label>Regional Director Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Director_Name__c</fullName>
        <label>Regional Director Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KHRLobjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepExFlag__c</fullName>
        <label>RepExFlag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepExId__c</fullName>
        <label>RepExId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepExName__c</fullName>
        <label>RepExName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResetCS__c</fullName>
        <label>ResetCS</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResetCoordinator__c</fullName>
        <label>ResetCoordinator</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResetOrg1__c</fullName>
        <label>ResetOrg1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResetOrg2__c</fullName>
        <label>ResetOrg2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RowPtr__c</fullName>
        <label>RowPtr</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpdateEboard__c</fullName>
        <label>UpdateEboard</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KHRLobject</label>
    <nameField>
        <label>KHRLobject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KHRLobjects</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>